<resources>
    <string name="app_name">G-tracker</string>
    <string name="welcomeInfoId">Information Page</string>
    <string name="loginName">Information Page </string>
    <string name="logIn">Login </string>
    <string name="registerName">Register Page </string>
    <string name="logout_button">Logout Page </string>
    <string name="logouttext">Logout</string>
    <string name="forgotPassword">Forgot Password Page </string>
    <string name="Password">Password </string>
    <string name="Save">Save </string>
    <string name="cancel">Cancel</string>
    <string name="Welcome">Welcome   </string>
    <string name="Register">Register</string>
    <string name="Delete">Delete</string>
    <string name="Dismiss">Dismiss</string>
    <string name="now">now!</string>

    <string name="ResetPassword">Reset Password </string>
    <string name="changePassword">Change Password </string>
    <string name="PCS">Profile Changes Saved</string>
    <string name="DHAA">Don\'t have an account? </string>
    <string name="FP">Forgot Password? </string>
    <string name="GtrackerName">gtracker@gmail.com </string>
    <string name="GtrackerPhoneNumber">514-663-1313 </string>
    <string name="AboutGtracker">About G-tracker </string>

    <string name="editProfile">Edit Profile Page</string>
    <string name="editprofiletext">Edit Profile</string>
    <string name="NHFTCU">Need help finding the code use: </string>
    <string name="BEC">Bin Estimated Capacity </string>
    <string name="ECForJava">Estimated Capacity:  </string>
    <string name="DUS">Deleted User Successfully,</string>
    <string name="BHBSTD">Bin has been saved to database</string>
    <string name="ISTBCIIONITSY">It seems this bin code is incorrect or not in the system yet</string>
    <string name="deletemessagecheck">If you would like to delete your profile,
        input your email and password and press Delete Profile</string>

    <string name="aboutName">About page</string>
    <string name="FITSP">Fill the Surname Please!</string>
    <string name="FITNP">Fill the Name Please!</string>
    <string name="FTEMP">Fill the E-mail Please!</string>
    <string name="FTPP">Fill the Password Please!</string>
    <string name="PETUN">Please enter the user Name!</string>
    <string name="PETP">Please enter the password!</string>
    <string name="PEYCP">Please Enter your current password</string>
    <string name="PCYEMAP">Please check your E-mail and Password!</string>
    <string name="PEAVEM">Please enter a valid E-mail </string>
    <string name="PEYNP">Please Enter your new password</string>
    <string name="TPSB6C">The password should be more then 6 characters</string>
    <string name="YCPHTBMT6C">Your current password has to be more than 6 Characters</string>
    <string name="YNPHTBMT6C">Your new password has to be more than 6 Characters</string>
    <string name="TNPIS">the new password is similar! </string>
    <string name="TPSBTS">The password should be the same</string>
    <string name="NPHBS">New password has been set </string>
    <string name="AF">Authentication failed </string>
    <string name="FTR">Failed to register! </string>
    <string name="TUHBR">The user has been registered!</string>
    <string name="AYS">Are you sure? </string>
    <string name="TA">Try agin </string>
    <string name="YHBLO">You have been logged out </string>
    <string name="DTAWRICRY">Deleting this account will result in completely removing your  </string>
    <string name="AFTSAYWBATATA">account from the system and you won\'t be able to access the app.  </string>
    <string name="about">About</string>
    <string name="contactusName">Contact Us</string>
    <string name="HEM">E-mail</string>
    <string name="EMIR">E_mail is required </string>
    <string name="CYETRTP">Check your email to reset the password! </string>
    <string name="HCP">Confirm Password</string>
    <string name="CYPP">Confirm your Password please!</string>
    <string name="HEYEM">Enter your E-mail</string>
    <string name="HENP">Enter new password</string>
    <string name="HECP">Enter current password</string>
    <string name="HEBC">Enter Bin Code</string>
    <string name="HEBN">Enter Bin Name</string>
    <string name="HEL">Enter Location</string>
    <string name="BN">Bin Name</string>
    <string name="BL">Bin Location</string>
    <string name="BLForJava">Location: </string>
    <string name="LOAAS">List of All Available Sensors:</string>
    <string name="LOUB">List of User\'s Bins</string>
    <string name="TV">TextView</string>
    <string name="SN">Surname</string>
    <string name="N">Name</string>
    <string name="Percentage">%</string>
    <string name="NameForJava">Name: </string>


    <string name="savechanges">Save Changes</string>
    <string name="DeleteProfile">Delete Profile</string>
    <string name="chars">–‘abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"</string>
    <string name="charsAndNumbers">1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <string name="abouttext">G-tracker is a device capable of measuring how full a garbage can is and
        transmitting it onto an application where users (employees) can consult to know which garbage
        bin needs changing. It also acts as a data collection for a commercial area to potentially modify
        the location of garbage cans that are often empty, or add garbage cans to locations where they
        are often full. It is a project born out of Concordia University in Montreal, Canada by
        6 computer and electrical engineers. Our hopes are that this project will facilitate the job
        of all cleaning personel and further keep the world clean. Let us know if you have any
        questions or suggestions by contacting us through our contact us page.</string>
    <string name="contactustext">If you have any questions, comments, suggestions or business inquiries,
        please do not hesitate to contact us at:</string>
    <string name="contactuscontinued"> Or if you wish to call, please do so at: </string>
    <string name="TeamInfo">
        Project Team Members: \n\n
        Mohammed Al-Taie, 40097284 \n
        Paul Westenberg, 40087074 \n
        Erfan Reza, 40080730 \n
        Saro Nokhoudian, 40073669 \n
        Rifadul Haque, 40107346 \n
        Jean Mardini, 40031904 \n\n

        Scrum Master:\n
        Mohammed Sehab\n
    </string>
    <!--    new string-->
    <string name="BC">Bin Code</string>
    <string name="deleteBinFragmentTitle">Deleting this bin will result in completely removing your
    bin from your account and you won\'t be able to access its information anymore.</string>
    <string name="binDeleted">Bin Deleted</string>
    <string name="binCodeEmptyString">Please input a Bin Code</string>
    <string name="binNameEmptyString">Please input a Bin Name</string>
    <string name="binLocationEmptyString">Please input a Bin Location</string>
    <string name="onclicklist">shooo</string>
    <string name="editBinString">Edit Bin Information</string>
    <string name="consultBinString">Consult Bin</string>
    <string name="thewordbin">Bin</string>
    <string name="removedfromaccount">has been removed</string>
    <string name="saveNewInfoButton">Save Changes</string>
    <string name="saveNewBC">Save New Bin Code</string>
    <string name = "editBin">Edit Bin Page</string>
    <string name = "MSString">modified successfully</string>

</resources>