<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".view.EditBinActivity">


    <EditText
        android:id="@+id/editTextChangeBinId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/HEBC"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveNewBinInformationButton" />

    <EditText
        android:id="@+id/editTextChangeBinName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:hint="@string/HEBN"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextChangeLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/HEL"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextChangeBinName" />

    <Button
        android:id="@+id/saveNewBinCodeButton"
        android:layout_width="227dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/small_btn"
        android:text="@string/saveNewBC"
        android:textColor="@color/btnTextColors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qrScanTextView" />

    <Button
        android:id="@+id/saveNewBinInformationButton"
        android:layout_width="217dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/small_btn"
        android:text="@string/saveNewInfoButton"
        android:textColor="@color/btnTextColors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextChangeLocation" />

    <TextView
        android:id="@+id/qrScanTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="@string/NHFTCU"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextChangeBinId" />

    <!--    <androidx.constraintlayout.widget.Guideline-->
    <!--        android:id="@+id/guideline2"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="vertical"-->
    <!--        app:layout_constraintGuide_begin="40dp" />-->
    <!---->
    <!--    <androidx.constraintlayout.widget.Guideline-->
    <!--        android:id="@+id/guideline3"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        app:layout_constraintGuide_begin="40dp" />-->

    <!--    <androidx.constraintlayout.widget.Guideline-->
    <!--        android:id="@+id/guideline4"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        app:layout_constraintGuide_end="40dp" />-->

    <!--    <androidx.constraintlayout.widget.Guideline-->
    <!--        android:id="@+id/guideline5"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="vertical"-->
    <!--        app:layout_constraintGuide_percent="0.9026764" />-->

</androidx.constraintlayout.widget.ConstraintLayout>