<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.634"
    android:background="@drawable/background1"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditProfileActivity">

        <EditText
            android:id="@+id/editTextEditSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="156dp"
            android:background="@drawable/name"
            android:digits="@string/chars"
            android:ems="10"
            android:hint="@string/SN"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingLeft="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.248"
            app:layout_constraintStart_toEndOf="@+id/editTextEditName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/currentPasswordEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/password_login"
            android:ems="10"
            android:hint="@string/HECP"

            android:inputType="textPersonName|textPassword"
            android:minHeight="48dp"
            android:paddingLeft="60dp"
            android:password="true"
            app:layout_constraintBottom_toTopOf="@+id/newPasswordEditProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <EditText
            android:id="@+id/newPasswordEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"

            android:background="@drawable/password_login"
            android:ems="10"
            android:hint="@string/HENP"
            android:inputType="textPersonName|textPassword"
            android:minHeight="48dp"
            android:paddingLeft="60dp"

            android:password="true"
            app:layout_constraintBottom_toTopOf="@+id/changepasswordbutton"
            app:layout_constraintStart_toEndOf="@+id/currentPasswordEditProfile"
            app:layout_constraintStart_toStartOf="@+id/currentPasswordEditProfile"
            app:layout_constraintTop_toBottomOf="@+id/currentPasswordEditProfile" />

        <ProgressBar
            android:id="@+id/progressBarRegister"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextEditName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/name"
            android:digits="@string/chars"
            android:ems="10"
            android:hint="@string/N"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingLeft="60dp"
            app:layout_constraintStart_toStartOf="@+id/editTextEditSurname"
            app:layout_constraintTop_toBottomOf="@+id/editTextEditSurname" />

        <Button
            android:id="@+id/saveEditsButton"
            android:layout_width="152dp"
            android:layout_height="40dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/big_btn"
            android:fontFamily="sans-serif-black"
            android:text="@string/savechanges"
            android:textAlignment="center"
            android:textColor="@color/btnTextColors"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/editTextEditName"
            app:layout_constraintStart_toEndOf="@+id/editTextEditSurname"
            app:layout_constraintStart_toStartOf="@+id/editTextEditName"
            app:layout_constraintTop_toBottomOf="@+id/editTextEditName" />

        <Button
            android:id="@+id/changepasswordbutton"
            android:layout_width="204dp"
            android:layout_height="37dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/big_btn"
            android:text="@string/changePassword"
            android:textColor="@color/btnTextColors"
            app:layout_constraintEnd_toEndOf="@+id/newPasswordEditProfile"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/newPasswordEditProfile"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordEditProfile" />

        <Button
            android:id="@+id/deleteprofilebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/ScaryRed"
            android:text="@string/DeleteProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <ProgressBar
            android:id="@+id/progressBarEditProfile"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveEditsButton" />

        <View
            android:id="@+id/divider2"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changepasswordbutton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>